
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {int type; } ;
struct TYPE_5__ {int lock; int cond_cmd; int send_cmd; int reply_cmd; TYPE_2__ cmd_data; } ;
typedef TYPE_1__ thread_video_t ;
typedef TYPE_2__ thread_packet_t ;


 int CMD_VIDEO_NONE ;
 int scond_signal (int ) ;
 int slock_lock (int ) ;
 int slock_unlock (int ) ;

__attribute__((used)) static void video_thread_reply(thread_video_t *thr, const thread_packet_t *pkt)
{
   slock_lock(thr->lock);

   thr->cmd_data = *pkt;

   thr->reply_cmd = pkt->type;
   thr->send_cmd = CMD_VIDEO_NONE;

   scond_signal(thr->cond_cmd);
   slock_unlock(thr->lock);
}
